--- a/app/views/welcome/index_new.html.erb
+++ b/app/views/welcome/index_new.html.erb
@@ -65,24 +65,24 @@
         <% [
           {
             image_url: 'images/illustrations/describe_lifestyle.png',
-            title_key: 'views.welcome.index.how_it_works.bullets.bullet_1_heading',
-            body_key: 'views.welcome.index.how_it_works.bullets.bullet_1_text'
+            title: t('views.welcome.index.how_it_works.bullets.bullet_1_heading'),
+            body: t('views.welcome.index.how_it_works.bullets.bullet_1_text')
           },
           {
             image_url: 'images/illustrations/sign_up.png',
-            title_key: 'views.welcome.index.how_it_works.bullets.bullet_2_heading',
-            body_key: 'views.welcome.index.how_it_works.bullets.bullet_2_text'
+            title: t('views.welcome.index.how_it_works.bullets.bullet_2_heading'),
+            body: t('views.welcome.index.how_it_works.bullets.bullet_2_text')
           },
           {
             image_url: 'images/illustrations/save_the_planet.png',
-            title_key: 'views.welcome.index.how_it_works.bullets.bullet_3_heading',
-            body_key: 'views.welcome.index.how_it_works.bullets.bullet_3_text'
+            title: t('views.welcome.index.how_it_works.bullets.bullet_3_heading'),
+            body: t('views.welcome.index.how_it_works.bullets.bullet_3_text')
           }
         ].each do |item| %>
           <div class="callout w-full m-lg:w-3/4 d:w-1/3 p-4 d:p-8 bg-white">
             <%= image_tag webpack_asset_path(item[:image_url]), class: '-mt-24 mx-auto' %>
-            <h3 class="text-lg font-semibold my-2 text-center"><%=t item[:title_key] %></h3>
-            <p><%=t item[:body_key] %></p>
+            <h3 class="text-lg font-semibold my-2 text-center"><%= item[:title] %></h3>
+            <p><%= item[:body] %></p>
           </div>
         <% end %>
       </div>
