--- a/app/views/shared/_prefooter.html.erb
+++ b/app/views/shared/_prefooter.html.erb
@@ -4,13 +4,7 @@
     <p><%= t('views.shared.prefooter.body_text') %> </p>
     <p><%= link_to t('views.shared.prefooter.button'), root_path, class: 'button' %></p>
   </div>
-  <div class="relative overflow-x-hidden w-full h-48 t:h-64 -mt-16 t:-mt-24 -z-10">
-    <%= image_tag webpack_asset_path('images/illustrations/prefooter/behind_left.png'), class: 'absolute right-1/2 d:right-auto d:left-0 h-full max-w-none' %>
-    <%= image_tag webpack_asset_path('images/illustrations/prefooter/behind_right.png'), class: 'absolute left-1/2 d:left-auto d:right-0 h-full max-w-none' %>
-    <div class="absolute -mx-32 t:mx-0 h-full t:w-full">
-      <%= image_tag webpack_asset_path('images/illustrations/prefooter/ground.svg'), class: 'w-full h-full' %>
-    </div>
-    <%= image_tag webpack_asset_path('images/illustrations/prefooter/left.png'), class: 'absolute right-1/2 d:right-auto d:left-0 h-full max-w-none' %>
-    <%= image_tag webpack_asset_path('images/illustrations/prefooter/right.png'), class: 'absolute left-1/2 d:left-auto d:right-0 h-full max-w-none' %>
+  <div class="-mt-16 t:-mt-24 -z-10">
+    <%= render "shared/bottom_landscape" %>
   </div>
 </section>
