New design sign up
Co-authored-by: Kalle Nilvér <kalle@nilver.se>
Co-authored-by: Stefan Lindbohm <stefan@goclimate.com>

--- a/app/assets/main/components/button.scss
+++ b/app/assets/main/components/button.scss
@@ -5,7 +5,7 @@
     border rounded border-current
     bg-transparent
     whitespace-no-wrap
-    text-primary
+    text-primary text-center
     transition duration-200
     cursor-pointer;
 
