Remove Evelina from About us page

--- a/app/views/about/show.html.erb
+++ b/app/views/about/show.html.erb
@@ -71,17 +71,10 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-12 col-md-6 profile">
+      <div class="profile">
         <%= image_tag webpack_asset_path('images/about/emma.jpg'), class: 'img-circle', alt: "" %>
         <h2>Emma Bäckström</h2>
         <p><%=t 'about_us_who_are_we_emma_html' %></p>
-      </div>
-      <div class="col-xs-12 col-md-6 profile">
-        <%= image_tag webpack_asset_path('images/about/evelina.jpg'), class: 'img-circle', alt: "" %>
-        <h2>Evelina Utterdahl</h2>
-        <p><%=t 'about_us_who_are_we_evelina_html' %></p>
-        <p><b>Instagram:</b> <%= link_to 'earthwanderess', 'https://www.instagram.com/earthwanderess/', target: "_blank" %></p>
-        <p><b>Twitter:</b> <%= link_to 'earthwanderess', 'https://twitter.com/earthwanderess', target: "_blank" %></p>
       </div>
     </div>
 
