Small design fixes

--- a/app/views/about/show_new.html.erb
+++ b/app/views/about/show_new.html.erb
@@ -106,9 +106,7 @@
 
 <section class="section-padding">
   <div class="d:flex section-gutter">
-    <div class="d:w-1/2">
-    </div>
-    <div class="d:w-1/2">
+    <div class="d:w-1/2 d:mx-auto">
       <div class="max-w-xl space-y-6 mx-auto">
         <h2 class="heading-lg">
           <%=t 'about_us_how_do_we_stop_climate_change' %>
