--- a/app/views/devise/registrations/new_new.html.erb
+++ b/app/views/devise/registrations/new_new.html.erb
@@ -169,7 +169,7 @@
 
 <div class="bg-blue-tint-1 relative">
   <%= image_tag webpack_asset_path('images/illustrations/forest_and_city.png'), class: 't:max-w-3/4 mx-auto', style: 'max-width: 812px'%>
-  <%= image_tag webpack_asset_path('images/illustrations/horizon_curve.svg'), class: 'w-full absolute bottom-0 -mb-1' %>
+  <%= image_tag webpack_asset_path('images/illustrations/horizon_curve.svg'), class: 'w-full h-6 absolute bottom-0 -mb-1' %>
 </div>
 
 <section class="bg-green-tint-1">
