New design gift cards

--- a/app/views/gift_cards/index.html.erb
+++ b/app/views/gift_cards/index.html.erb
@@ -1,3 +1,5 @@
+<!-- TODO: Don't forget to remove variables used by this template from the controller -->
+
 <% set_meta_tags og: { image: webpack_asset_path('images/giftcards_en.jpg') } if I18n.locale == :en %>
 <% set_meta_tags og: { image: webpack_asset_path('images/giftcards_sv.jpg') } if I18n.locale == :sv %>
 
