--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -95,7 +95,7 @@
             <h3 class="font-bold mb-4"><%= t 'views.registrations.your_subscription' %></h3>
             <div class="flex justify-between items-center mb-2">
               <span><%= t 'views.registrations.number_of_people' %></span>
-              <div class="relative">
+              <div class="select-wrapper">
                 <%= form_with method: :get, html: { 'data-target': 'registration-price.peopleForm' } do |f| %>
                   <%= f.hidden_field(:lifestyle_footprint, :value => @footprint.key) %>
                   <%= f.select :people,
@@ -104,9 +104,6 @@
                     { class: 'select', 'data-action': 'registration-price#update' }
                   %>
                 <% end %>
-                <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700">
-                  <i class="fa fa-angle-down" aria-hidden="true"></i>
-                </div>
               </div>
             </div>
             <div class="h-px w-full bg-gray-500 my-4"></div>
