Update content on about us page

--- a/app/views/about/show_new.html.erb
+++ b/app/views/about/show_new.html.erb
@@ -17,6 +17,48 @@
   </div>
 </section>
 
+<% if I18n.locale == :sv %>
+  <section class="section-padding">
+    <h2 class="heading-lg text-center">Vi har medverkat i</h2>
+    <div class="flex flex-wrap justify-center mt-6">
+        <% [
+          {
+            image_url: "images/press_logos/dn.png",
+            url: "https://www.dn.se/ekonomi/kalle-nilver-lamnade-vd-jobb-for-att-fa-fler-att-klimatkompensera/"
+          },
+          {
+            image_url: "images/press_logos/breakit-logo-_low_300.png",
+            url: "https://www.breakit.se/artikel/19823/kalle-nilver-lamnar-toppjobbet-for-att-radda-oss-fran-klimatkatastrof"
+          },
+          {
+            image_url: "images/press_logos/Dagens-industri_logo_low_300.png",
+            url: "https://www.di.se/nyheter/stjarnkrogen-levde-upp-till-forvantningarna-fantastisk-16-ratters/"
+          },
+          {
+            image_url: "images/press_logos/aktuell_hallbarhet.png",
+            url: "https://www.aktuellhallbarhet.se/lamnar-vd-jobbet-for-att-stoppa-klimatforandringarna/"
+          },
+          {
+            image_url: "images/press_logos/Di-Weekend_low_300.png",
+            url: "https://weekend.di.se/reportage/sa-minskar-du-din-klimatangest"
+          },
+          {
+            image_url: "images/press_logos/syre.png",
+            url: "https://tidningensyre.se/stockholm/leva-ett-klimatneutralt-liv/"
+          }
+        ].each do |logo| %>
+          <a href="<%= logo[:url] %>" target="_blank" rel="noopener" class="w-1/2 md:w-1/3 flex items-center justify-center p-5 m-lg:p-8 t:p-10" style="max-height: 120px">
+            <%= image_tag webpack_asset_path(logo[:image_url]), class: 'max-h-full' %>
+          </a>
+        <% end %>
+      </div>
+  </section>
+<% end %>
+
+<!-- 
+Lyssna på Cissi i <a href="https://klimatpodden.se/66-cecilia-linden-klimatkompensera-din-livsstil" target="_blank" rel="noreferrer noopener">Klimatpodden</a> och <a href="https://healthforwealth.se/podcast/144-klimatneutral-pa-jobbet-jo-det-gar/" target="_blank" rel="noreferrer noopener">Health for Wealth</a>.
+-->
+
 <section class="section-padding">
   <h2 class="heading-lg text-center mb-12">
     <%=t 'about_us_who_are_we' %>
@@ -59,11 +101,11 @@
       },
     ].each do |person| %>
       <div class="w-full t:w-1/2 d:w-1/3 space-y-3 text-center">
-        <%= image_tag webpack_asset_path("images/about/#{person[:key]}.jpg"), class: 'rounded-full mx-auto', alt: person[:key] %>
+        <%= image_tag webpack_asset_path("images/about/#{person[:key]}.jpg"), class: 'rounded-full mx-auto w-48', alt: person[:key] %>
         <h3 class="heading">
           <%= person[:full_name] %>
         </h3>
-        <p><%=t "about_us_who_are_we_#{person[:key]}_html" %></p>
+        <p><%= t("about_us_who_are_we_#{person[:key]}_html").gsub('<a', '<a class="link"').html_safe %></p>
         <% if person[:phone_number] %>
           <p><b>Phone:</b> <%= link_to person[:phone_number], 'tel:' + person[:phone_number], class: 'link' %></p>
         <% end %>
@@ -117,44 +159,6 @@
     </div>
   </div>
 </section>
-
-<% if I18n.locale == :sv %>
-  <section class="section-padding">
-    <h2 class="heading-lg text-center">Vi har medverkat i</h2>
-    <div class="flex flex-wrap justify-center mt-6">
-        <% [
-          {
-            image_url: "images/press_logos/dn.png",
-            url: "https://www.dn.se/ekonomi/kalle-nilver-lamnade-vd-jobb-for-att-fa-fler-att-klimatkompensera/"
-          },
-          {
-            image_url: "images/press_logos/breakit-logo-_low_300.png",
-            url: "https://www.breakit.se/artikel/19823/kalle-nilver-lamnar-toppjobbet-for-att-radda-oss-fran-klimatkatastrof"
-          },
-          {
-            image_url: "images/press_logos/Dagens-industri_logo_low_300.png",
-            url: "https://www.di.se/nyheter/stjarnkrogen-levde-upp-till-forvantningarna-fantastisk-16-ratters/"
-          },
-          {
-            image_url: "images/press_logos/aktuell_hallbarhet.png",
-            url: "https://www.aktuellhallbarhet.se/lamnar-vd-jobbet-for-att-stoppa-klimatforandringarna/"
-          },
-          {
-            image_url: "images/press_logos/veckansaffarer-logga_low_300.png",
-            url: "https://www.va.se/nyheter/2019/07/16/vi-maste-konsumera-mycket-mindre/"
-          },
-          {
-            image_url: "images/press_logos/syre.png",
-            url: "https://tidningensyre.se/stockholm/leva-ett-klimatneutralt-liv/"
-          }
-        ].each do |logo| %>
-          <a href="<%= logo[:url] %>" target="_blank" rel="noopener" class="w-1/2 md:w-1/3 flex items-center justify-center p-5 m-lg:p-8 t:p-10" style="max-height: 120px">
-            <%= image_tag webpack_asset_path(logo[:image_url]), class: 'max-h-full' %>
-          </a>
-        <% end %>
-      </div>
-  </section>
-<% end %>
 
 <%= render 'shared/more_info', pages: [:projects, :transparency] %>
 
