Update share image

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
           url: canonical_url,
           title: :title,
           description: :description,
-          image: webpack_asset_url('images/share-image.png'),
+          image: webpack_asset_url('images/share-image.jpg'),
           locale: I18n.locale,
         }
       )
